--- a/css/styles.css
+++ b/css/styles.css
@@ -1,96 +1,68 @@
-/* Button Styles */
-body {
+* {
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+#accordion {
+    width: 100%;
+    max-width: 40rem;
+    background-color: rgb(40, 94, 156);
+}
+
+.accordion-item {
+    width: 100%;
+    height: auto;
+}
+
+#accordion-item-header {
     position: relative;
     top: 0;
     left: 0;
-}
-.section {
-    background-color: rgb(163, 203, 242);
-}
-
-.btn-container {
-    width: 100%;
-    height: 100%;
-    min-height: 900px;
+    height: auto;
+    max-height: 91.422px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-}
-
-#open-modal {
-    /* flex: 1 0 100%; */
-   color: #fff;
-   font-size: 2.5rem;
-   font-family: sans-serif;
-   padding: 1rem 3rem;
-   transition: all .2s;
-   background-color: rgb(125, 33, 182);
-   border-radius: 8px;
-}
-
-#open-modal:hover {
-    color: rgb(125, 33, 182);
-    background-color: #fff;
+    padding: 1rem 3rem;
+    background-color: #f0f0f0;
     cursor: pointer;
-}
-
-#modal {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0%;
-    padding: 3rem;
-    opacity: 0;
-    z-index: -1;
+    overflow: hidden;
     transition: all .2s;
 }
 
-#modal.open {
-    left: 0;
-    opacity: 1;
-    background-color: rgba(0,0,0,0.7);
-    z-index: 99;
+#accordion-item-header:hover {
+    background-color: #ccc;
 }
 
-#modal-content {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    min-height: 100%;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(125, 33, 182);
-    box-shadow: 0 2px 10px rgba(0,0,0,0.7);
+#accordion-item-header>span:first-child {
+    flex: 14;
 }
 
-#modal.close {
-    opacity: 0;
-    z-index: -1;
+#accordion-item-header>span:last-child {
+    flex: 1;
+    padding: 1rem;
 }
 
-#close-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;;
-    padding: 21px;
-    border: 3px solid rgb(109, 105, 175);
-    border-radius: 100px;
-    background-color: rgb(109, 105, 175);
-    transition: all .2s;
+object {
+    width: 1.5rem;
+    max-width: 1.5rem;
+    height: auto;
 }
 
-#close-btn:hover {
-    
-    padding: 21px;
+/* object#close {
+    background-image: url('icons/minus-solid.svg');
+} */
 
-    background-color:rgb(174, 59, 246);
-    border: 3px solid rgb(64, 16, 94);
+.accordion-item-body {
+  height: 0;
+  max-height: 300px; 
+  overflow: hidden;
+  background-color: #fff;
+  transition: all .3s;
+}
+
+.accordion-item-body.open {
+    height: 300px;
 }
