--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,17 @@
 * {
-    width: 100%;
-    height: 100%;
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
-#accordion {
+#accordions {
     width: 100%;
     max-width: 40rem;
     background-color: rgb(40, 94, 156);
+}
+
+.accordion {
+    width: 100%;
+    height: auto;
 }
 
 .accordion-item {
@@ -16,7 +19,7 @@
     height: auto;
 }
 
-#accordion-item-header {
+.accordion-header {
     position: relative;
     top: 0;
     left: 0;
@@ -27,42 +30,66 @@
     align-items: center;
     padding: 1rem 3rem;
     background-color: #f0f0f0;
+    border-bottom: 1px solid #ccc;
     cursor: pointer;
     overflow: hidden;
     transition: all .2s;
 }
 
-#accordion-item-header:hover {
+.accordion-header:hover {
     background-color: #ccc;
 }
 
-#accordion-item-header>span:first-child {
+.accordion-heading {
     flex: 14;
 }
 
-#accordion-item-header>span:last-child {
+.accordion-header>span {
     flex: 1;
     padding: 1rem;
 }
 
-object {
+.accordion-icon {
     width: 1.5rem;
     max-width: 1.5rem;
     height: auto;
 }
 
-/* object#close {
-    background-image: url('icons/minus-solid.svg');
+
+/* .accordion-open {
+    display: block;
 } */
 
-.accordion-item-body {
-  height: 0;
-  max-height: 300px; 
-  overflow: hidden;
-  background-color: #fff;
-  transition: all .3s;
+.accordion-close {
+    display: block;
+    background-image: url('icons/minus-solid.svg');
 }
 
-.accordion-item-body.open {
-    height: 300px;
+.accordion-body {
+    display: flex;
+    flex-direction: row;
+    height: 0;
+    max-height: 300px; 
+    overflow: hidden;
+    background-color: #fff;
+    transition: all .3s;
+}
+
+.accordion-body.is-open {
+    height: auto;
+    padding: 1rem 0 2rem 0;
+}
+
+.accordion-body > .img {
+    flex: 1;
+    padding: 2rem;
+    background-image: url('icons/plus-solid.svg');
+} 
+
+.accordion-body > .img.close {
+    background-image: url('icons/minus-solid');
+}
+.accordion-body > .description {
+    flex: 2;
+    padding: 2rem 2rem 2rem;
 }
